1998-08-04  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/bits/sigthread.h: Use __sigset_t instead
	of sigset_t.

1998-08-02  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* Makefile (linuxthreads-version): Extract correct number from
	Banner.

1998-07-29  Xavier Leroy  <Xavier.Leroy@inria.fr>

	* Banner: Bump version number to 0.8
	* FAQ.html: Many updates, in particular w.r.t. debugging.
	* manager.c: Support for non-default stacksize for
	LinuxThreads-allocated stacks;
	don't use guard pages for stacks with default size, rely on
	rlimit(RLIMIT_STACK) instead (it's cheaper).
	* attr.c: Likewise.
	* cancel.c: Use __pthread_sig_cancel and __pthread_sig_restart
	everywhere instead of PTHREAD_SIG_CANCEL and PTHREAD_SIG_RESTART.
	* condvar.c: Likewise.
	* internals.h: Likewise.
	* restart.h: Likewise.
	* signals.c: Likewise.
	* pthread.c: Likewise; set rlimit(RLIMIT_STACK) as we need it.

1998-07-23  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* weaks.c: Define pthread_mutexattr_[sg]ettype instead of
	__pthread_mutexattr_[sg]ettype.  Add more weak aliases.
	* Versions: Put __pthread_mutexattr_settype under version
	GLIBC_2.0.  Don't export __pthread_mutexattr_setkind_np and
	__pthread_mutexattr_gettype.

1998-07-23  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* sysdeps/pthread/bits/libc-lock.h: Make
	__pthread_mutexattr_settype weak.  Don't make
	__pthread_mutexattr_setkind_np weak.

1998-07-16 10:52  Ulrich Drepper  <drepper@cygnus.com>

	* manager.c (pthread_handle_create): Check whether sched_setscheduler
	call can succeed here.

	* mutex.c: Define __pthread_mutexattr_settype and make
	__pthread_mutexattr_setkind_np an alias.
	Likewise for __pthread_mutexattr_gettype.

1998-07-15 11:00 -0400  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* attr.c (pthread_attr_setschedpolicy): Don't check whether caller
	is root.

1998-07-14 19:38  Ulrich Drepper  <drepper@cygnus.com>
